TWEAK arrows on Scrollable, FIX text overlay on Disease carto, FIX mobile left align on embed button

--- a/app/public/global.css
+++ b/app/public/global.css
@@ -13,9 +13,13 @@ body {
   font-style: normal;
 }
 
-article, .page-header, .footer-content {
+article, .page-header {
   max-width: 75rem;
   margin: 0 1rem;
+}
+
+.footer-content {
+  margin: 0;
 }
 
 .margin-breakout-mobile {
